<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#111111"
    tools:context=".ui.ReaderActivity">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="3dp"
        android:textColor="#cccccc"
        android:background="#333333"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Tiêu đề chap" />

    <ScrollView
        android:id="@+id/scrollview_content"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:scrollbarThumbVertical="@color/colorPrimary"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title">

        <TextView
            android:id="@+id/tv_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:lineSpacingMultiplier="1.2"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:scrollbars="vertical"
            android:textColor="#f5f5f5"
            android:textIsSelectable="true"
            android:textSize="24sp"
            tools:text="Nội dung chương Nội dung chương Nội dung chương" />

    </ScrollView>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/colorBottomBar"
        android:weightSum="4"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/btn_prev"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:text="@string/prev_chap"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btn_reading"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:text="@string/Reading"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btn_replace"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:text="@string/libs_replace"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btn_next"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:text="@string/next_chap"
            android:textColor="@color/white" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>